--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                 <h2>
                     Pedro Cabrinha
                 </h2>
-                <h4>
-                    Novas Tecnologias e Computadores
-                </h4>
             </div>
         </header>
         <!-- Header End -->
@@ -68,9 +65,6 @@
                                 <h2>
                                     Pedro Cabrinha
                                 </h2>
-                                <h4>
-                                    Novas Tecnologias e Computadores
-                                </h4>
                             </div>
                         </div>
                         <div class="break"></div>
@@ -163,7 +157,7 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        12º Ano - ar Ciências e Tecnologias
+                                        12º Ano - Ciências e Tecnologias
                                     </h5><span class="label label-success">2008 - 2009</span>
                                     <p>
                                         Escola Secundária de Alcochete
@@ -189,9 +183,6 @@
                                     <span>InDesign</span>
                                 </div>
                                 <div>
-                                    <span>Fireworks</span>
-                                </div>
-                                <div>
                                     <span>Dreamweaver</span>
                                 </div>
                                 <div>
@@ -204,7 +195,7 @@
                                     <span>Linux</span>
                                 </div>
                                 <div>
-                                    <span>Sketchup</span>
+                                    <span>Sketchup + Vray</span>
                                 </div>
                                 <div>
                                     <span>AutoCAD</span>
