--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="images/portefolio/veludo_vermelho_img.jpg" alt="">
+                                <img src="images/portefolio/aandrade_img.jpg" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://www.veludovermelho.com" class="btn">Ver</a>
+                                        <a href="http://aandrade-idesign.com" class="btn">Ver</a>
                                     </div>
                                 </div>
                             </div>
